# auto-clone-update-git-repos

./: README.md  auto_clone_update_git.py  repos.yaml
autoclonegit/: __init__.py  __main__.py  cli.py  exceptions.py  yaml_parser.py
autogit/: __init__.py  __main__.py  autogit.py  cli.py  exceptions.py  yaml_parser.py
autogit_proj/: LICENSE  pyproject.toml  requirements.txt
autogit_proj/src/autogit/: __init__.py  __main__.py  api.py  cli.py
autogit_proj/tests/: test_autogit.py
tests/: test_autoclonegit.py  test_autogit.py
