[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "autogit"
authors = [
    { name = "Sergio Díaz", email = "sergiodm.dev@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python=">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "colorama==0.4.6",
    "pyyaml==6.0.1",
    "shellingham==1.5.0.post1",
    "typer==0.9.0",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Home = "https://github.com/dmsergio/autogit"

[project.scripts]
autogit = "autogit:app"
